--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "denv",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Easy load environment variables in your app inside docker container",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/test_common.js"
+    "test": "mocha ./test/test_common.js"
   },
   "keywords": [
     "environment",
     "docker",
     "container"
   ],
-  "author": "Andrei Tretyakov <andrei.tretyakov@gmail.com>",
+  "author": {
+    "name": "Andrei Tretyakov",
+    "email": "andrei.tretyakov@gmail.com",
+    "url": "https://github.com/ofkindness"
+  },
   "license": "MIT",
   "devDependencies": {
-    "mocha": "^3.0.2"
+    "mocha": "^3.2.0"
   }
 }
